--- a/storeroot/default/pathroot/admin/master.xhtml
+++ b/storeroot/default/pathroot/admin/master.xhtml
@@ -32,7 +32,7 @@
                 class="icon-bar"></span> <span class="icon-bar"></span> <span
                 class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/"><b>@{rc.sc.name}</b></a>
+        <a class="navbar-brand" href="/"><b>@{g:rc.sc.name}</b></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
